# VeTube

./: .gitignore  .gitmodules  README.md  VeTube.pot  VeTube.py  ajustes.py  changelog.txt  chat_de_youtube.PY  data.json  error.txt  fajustes.py  funciones.py  languageHandler.py  languages.json  main.py  mostrarchat.py  notas.txt  pyproject.toml  requirements.txt  run_main_window.py  setup.py  sound.py  soundtest.py  test_tiktok_url.py  translator.py  updater.json
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: betube32.yml  betube64.yml
TTS/: lector.py  list_voices.py  sonata_handler.py
TTS/Piper/: __init__.py  speaker.py
controller/: ajustes_controller.py  chat_controller.py  chat_dialog_controller.py  editor_controller.py  estadisticas_controller.py  main_controller.py  media_controller.py  piper_downloader_controller.py  update_languages_controller.py
controller/menus/: chat_filter_controller.py  chat_item_controller.py  chat_menu_controller.py  main_menu_controller.py
doc/cs/: discord.md  readme.md
doc/en/: discord.md  readme-en.md  readme.md
doc/es/: changelog.txt  discord.md  readme.md
doc/fr/: changelog.txt  discord.md  readme-fr.md  readme.md
doc/id/: changelog.txt  discord.md  readme.md
doc/pl/: changelog.txt  discord.md  readme.md
doc/pt/: changelog.txt  discord.md  readme pt.md  readme.md
exchange/: __init__.py  codes.py
globals/: data_store.py  mensajes.py  resources.py
helpers/: playroom_helper.py  reader_handler.py  sound_helper.py
helpers/keyboard_handler/: main.py
installer/: vetube.iss
keyboard_handler/: wx_handler.py
locales/: VeTube.pot
new/: editor.py  run_main_window.py  setup.py  updater.json
new/TTS/: lector.py  list_voices.py
new/controller/: ajustes_controller.py  chat_controller.py  editor_controller.py  estadisticas_controller.py  main_controller.py  main_menu_controller.py
openspec/: config.yaml
players/: media_handler.py  sound_helper.py  vlc_helper.py
readme/: readme.es.ar.txt  readme.es.en.txt  readme.es.fr.txt  readme.es.it.txt  readme.es.pt.txt
servicios/: YouTubeRealDataTime.py  base_downloader.py  chat_service_protocol.py  discord.py  estadisticas_manager.py  kick.py  language_updater.py  message_router.py  piper_manager.py  sala.py  tiktok.py  twich.py  youtube.py
tests/: conftest.py  test_estadisticas_manager.py  test_sound_helper.py
translates/: languages.json
ui/: ajustes.py  ajustes_events.py  ajustes_ui.py  chat_dialog.py  chat_ui.py  dialog_response.py  discord_token_dialog.py  list_urls.py  main_window.py  piper_downloader.py  show_comment.py  update_languages_dialog.py  vetube.py
update/: bootstrap_fix.py  update.py  updater.py  utils.py  wxUpdater.py
utils/: app_utilitys.py  canonical_scraper.py  fajustes.py  funciones.py  key_utilitys.py  languageHandler.py  language_updater.py  logging_setup.py  mensajes.py  menu_accesible.py  mostrarchat.py  network.py  play_mp4.py  translator.py
vetube/: VeTube.py  languageHandler.py  requirements.txt  restart.py  translator.py
(+146 files in other folders)
